@@ -1,4 +1,5 @@
 0.05
+ - Add tests for SGML and not ended element.
  - Fix bugtracker.
  - Update copyright years.
 
